src/Components/App/App.css
body,
html,
#root {
  height: 100%;
  background: var(--bg);
  transition: background 0.15s ease-in;
}

html,
body,
input,
::placeholder,
* {
  font-family: futura-pt, sans-serif;
}

html {
  font-size: 16px;
}

:root {
  --icon-size: 32px;
}

h1 {
  text-align: center;
  font-size: 1.5rem;
  font-weight: var(--bold);
}

h2 {
  font-size: 1.125rem;
  font-weight: var(--bold);
}

h3 {
  font-weight: var(--bold);
  font-size: 1rem;
}

p {
  font-weight: 400;
  font-size: 0.875rem;
  margin-bottom: 1rem;
}

.title {
  font-size: 2.5rem;
  font-weight: var(--bold);
  text-transform: uppercase;
  letter-spacing: 3px;
}

.subtitle {
  font-size: 1.5rem;
}

.label {
  font-weight: var(--bold);
  font-size: 0.875rem;
  text-transform: uppercase;
  letter-spacing: var(--spacing);
}

button {
  outline: none;
  background: none;
  border: none;
  cursor: pointer;
}

button:active,
button:focus {
  outline: none;
}

a,
a:visited,
a:focus,
a:hover {
  text-decoration: none;
  color: var(--text);
}

.TapItem {
  width: 44px;
  height: 44px;
  display: flex;
  flex: none;
  align-items: center;
  justify-content: center;
  cursor: pointer;
}

.iconContainer {
  display: flex;
  align-items: center;
  justify-content: center;
}

/* Containers */
.App {
  width: 100%;
  height: 100vh;
  /* mobile viewport bug fix */
  height: -webkit-fill-available;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  overflow: hidden;
  transition: background 0.15s ease-in;
  background: var(--bg);
}

.Container {
  width: 100%;
  height: 100%;
  max-width: 1440px;
  max-height: 900px;
  display: grid;
  flex: auto;
  grid-template-rows: 44px 1fr;
  grid-template-areas:
    "nav"
    "main";
}

.PageContainer {
  z-index: 20;
  position: absolute;
  right: 0;
  left: 0;
  top: 0;
  bottom: 0;
  display: none;
  visibility: hidden;
  align-items: center;
  background: none;
}

.PageContainer[isopen="true"] {
  display: flex;
  visibility: visible;
}

.Screen {
  width: 100%;
  max-width: 480px;
  height: 100%;
  padding: 16px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.TrackSelect {
  grid-area: main;
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  z-index: 1;
}

.Btn {
  height: 2.5rem;
  width: 8rem;
  display: flex;
  align-items: center;
  justify-content: center;
  border: 2px solid #777777;
  color: var(--text);
  text-align: center;
  background: none;
}

.Btn.rounded {
  height: 2.75rem;
  width: 9rem;
  border-radius: 1.375rem;
}

.Btn.large.rounded {
  border-radius: 1.5rem;
}

.Btn.primary {
  background: var(--brand-primary);
  color: #ffffff;
  border: none;
}

.Btn.large {
  height: 3rem;
  width: 100%;
  letter-spacing: 2px;
}

.Btn:disabled {
  opacity: 0.5;
  pointer-events: none;
}

.titleText {
  height: 200px;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  color: var(--text);
}

/* Hover state restricted to devices that support hover */
@media (hover: hover) {
  .Btn:hover {
    background: var(--btn-hover);
  }

  .Btn.primary:hover {
    background: var(--btn-primary-hover);
  }
}

.overlay {
  backdrop-filter: blur(32px);
  background: var(--bg-overlay);
}

.surface {
  background: var(--bg-surface);
  box-shadow: var(--drop-shadow);
}

/* Media queries for larger screens */
/* Most mobile devices and up */
@media all and (min-width: 360px) {
  h2 {
    font-size: 1.25rem;
  }

  p {
    font-size: 1rem;
    color: var(--text);
  }

  .TapItem {
    width: 50px;
    height: 50px;
  }

  :root {
    --icon-size: 36px;
  }

  .Btn {
    height: 3rem;
    width: 9rem;
  }

  .Btn.rounded {
    height: 3rem;
    border-radius: 1.5rem;
  }

  .Container {
    grid-template-rows: 50px 1fr;
  }
}

/* Tablets and up */
@media all and (min-width: 415px) {
  .Container {
    padding: 20px 20px;
  }
}

/* Large tablets and up */
@media all and (min-width: 768px) {
  .Container {
    grid-template-columns: minmax(314px, 576px) minmax(414px, 1fr);
    gap: 1fr;
    transition: grid-template-columns 0.15s ease-in-out;
  }

  .Container.collapsed {
    grid-template-columns: 0px minmax(414px, 1fr);
    max-width: 567px;
  }

  .TrackSelect {
    grid-area: 2 / 2;
  }

  .PageContainer {
    background: var(--scrim);
  }
}

/* Playlist Saved Screen */
.SuccessScreen {
  background: #111111;
  z-index: 20;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  overflow: hidden;
  opacity: 0;
  --duration: 1.6s;
  animation: fade-in-out var(--duration) ease-in-out;
}

.SuccessScreen::after {
  background: url(../TrackAction/PlaylistSaved.svg) no-repeat;
  background-size: auto;
  background-position: 50% 50%;
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  opacity: 0;
  animation: spin-up-down var(--duration) ease-in-out,
    fade-in-out var(--duration) ease-in-out;
}

.SuccessScreen::before {
  background: url(../TrackAction/vinyl_record.png) no-repeat;
  background-size: contain;
  background-position: 50% 50%;
  content: "";
  width: 625px;
  position: absolute;
  top: 0;
  left: calc(50vw - 312.5px);
  bottom: 0;
  opacity: 0;
  overflow: visible;
  animation: scale-up-down var(--duration) ease-in-out,
    fade-in-out var(--duration) ease-in-out;
}

@keyframes fade-in-out {
  0% {
    opacity: 0;
  }
  15% {
    opacity: 1;
  }
  85% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

@keyframes spin-up-down {
  0% {
    transform: rotate(0deg) scale(0.1);
  }
  25% {
    transform: rotate(720deg) scale(1);
  }
  85% {
    transform: rotate(720deg) scale(1);
  }
  100% {
    transform: rotate(0deg) scale(0.1);
  }
}

@keyframes scale-up-down {
  0% {
    transform: scale(0.01);
  }
  25% {
    transform: scale(0.8);
  }
  85% {
    transform: scale(0.8);
  }
  100% {
    transform: scale(0.01);
  }
}

